[metadata]
name = HTBOperator
version = 1.0.0
author = user0x1337
author_email = user0x1337@protonmail.com
license = GPLv3
description = A tool to access HTB features via command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/user0x1337/htb-cli
keywords = dump, git, repository, security, vulnerability, ctf, hackthebox
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GPLv3 License
    Topic :: Security

[options]
py_modules = htb-cli
python_requires = >=3.10
install_requires =
    requests
    colorama
    pyjwt
    tabulate
    psutil
    pexpect
    pyreadline3
    python-dateutil
    rich
    pillow
    python-hosts
    psutil
    beautifulsoup4
    tqdm
    paramiko

[options.entry_points]
console_scripts =
    htb-cli = htb-cli:main